--- a/client/src/home/message/message.css
+++ b/client/src/home/message/message.css
@@ -74,3 +74,11 @@
 	color: white;
 	border: none;
 }
+.bicon{
+	font-size: 200%;
+}
+@media screen and (max-width: 768px) {
+	.textarea{font-size: 14px;}
+	.bicon{font-size: 200%;}
+	.button{width: 20%;}
+}
