--- a/client/src/home/home.css
+++ b/client/src/home/home.css
@@ -20,3 +20,10 @@
     background-color: white;
     box-shadow: 5px 3px 5px rgba(0,0,0,0.75);
 }
+@media screen and (max-width: 768px) {
+    .appname{ display: none}
+    .homeContainer{
+        height: 100%;
+        width: 100%;
+    }
+}
