--- a/client/src/home/oldconversation/oldconversation.css
+++ b/client/src/home/oldconversation/oldconversation.css
@@ -54,3 +54,7 @@
     border: 4px solid rgb(30, 255, 0);
     margin-right: 10px;
 }
+
+@media screen and (max-width: 768px) {
+    .oldconversation h3{ font-size: 100%;}
+}
