--- a/client/src/login/login.css
+++ b/client/src/login/login.css
@@ -83,5 +83,7 @@ input,  button{
     .loginContainer{
         overflow-y: scroll;
     }
-    
+    .loginSection{
+        height: 100%;
+    }
 }
