--- a/client/src/home/oldconversation/oldconversation.css
+++ b/client/src/home/oldconversation/oldconversation.css
@@ -16,7 +16,7 @@
 .oldconversationheader h3{
     margin-left: 5px;
     color: white;
-    font-size: 1.5vw;
+    font-size: clamp(1.2rem, 1.5vw, 1.3rem);
 }
 .oldconversationheader:first-child{
     color: white;
@@ -54,12 +54,12 @@
     border: 4px solid rgb(30, 255, 0);
     margin-right: 10px;
 }
-
-@media screen and (max-width: 768px) {
-    .oldconversation h3{ font-size: 90%;}
-    .conicon{font-size: 120%;}
+.conicon{
+    font-size: 1.3rem
 }
-@media screen and (max-width: 380px) {
-    .oldconversation h3{ font-size: 110%;}
-    .conicon{font-size: 170%;}
+
+@media screen and (max-width: 480px) {
+	.menuHide{
+		display: none;
+	}
 }
